[tool.poetry]
name = "weather app"
version = "0.1.0"
description = ""
authors = ["vasilm1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests ="^2.31.0"
ttkbootstrap = "^1.10.1"
pillow = "^10.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
